# Bayesian-Inference-Module

./: .gitignore  auxiliary_functions.py  features_tech.py  main.py  model_tech.py  pyproject.toml
